--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,6 +13,12 @@ pipeline {
                 }
             }   
         }
+        stage("Quality Gate") {
+            steps {
+                timeout(time: 1, unit: 'HOURS') {
+                    // Parameter indicates whether to set pipeline to UNSTABLE if Quality Gate fails
+                    // true = set pipeline to UNSTABLE, false = don't
+                    waitForQualityGate abortPipeline: true
         stage('Package') { 
             steps {
                 sh 'mvn clean package -Dmaven.test.failure.ignore=true' 
