--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,19 +13,11 @@ pipeline {
                 }
             }   
         }
-        stage('Quality Gate') {
-            steps{
-                script{
-                    timeout(time: 1, unit: 'HOURS') {
-                        def qg = waitForQualityGate()
-                        if (qg.status != 'OK') {
-                        error "Pipeline aborted due to quality gate failure: ${qg.status}"
-                        }
-                    }
-                }
+        stage("Quality Gate 1") {
+            steps {
+                waitForQualityGate abortPipeline: true
             }
-            
-        }           
+        }          
         stage('Package') { 
             steps {
                 sh 'mvn clean package -Dmaven.test.failure.ignore=true' 
